--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -163,14 +163,7 @@ and the total residual error as,
 \begin{equation}
 \chi^{2} = \delta_{X}^{T} \mathbb{C_{\delta}}^{-1} \delta_{X},
 \end{equation}
-where the covariance matrix $\mathbb{C}_{\delta} = < \delta_{X} \delta_{X}>$ is constructed from the lognormal mocks\mr{, in a consistent manner similar to the normalized cross power spectrum}. Figure \ref{fig:nbarmock} shows the mean density contrast against the imaging properties for the DESI LRG targets. The dark and light shades represent the $1\sigma$ level fluctuations observed in 1000 lognormal density fields respectively with $\fnl=0$ and $76.9$ \mr{before mitigation}. The DESI LRG targets before treatment (No Weight) exhibits a strong trend around $10\%$ against the z-band depth which is consistent with the cross power spectrum. Additionally, there are significant spurious trends against extinction and stellar density at about $5-6\%$. The linear approach is able to mitigate most of the systematic fluctuations with only extinction and depth in the z-band as input; however, a new trend appears against the r-band psfsize map with the \textit{linear two maps} approach, which is indicative of the psfsize-related systematics in the DESI LRG targets. This finding is in agreement with that from the cross power spectrum test. With linear three maps, we still observe around $2\%$ residual spurious fluctuations in the low end of depth in z and around $1\%$ in the high end of psfsize in z, which implies the presence of non-linear systematic effects. We find that the imaging weights from the non-linear model trained with the three identified maps (or four maps including the stellar density) are capable of reducing the fluctuations below $2\%$. Even with the non-linear three maps, we have about $1\%$ remaining systematic fluctuations against the z-band psfsize.  \mr{The trends are diminished especially when we adapt non-linear nine maps, especially against the low end of depth in g and r and against the high end of psfsize in z.} 
-
-%\begin{figure}
-% \raggedright
-% \includegraphics[width=0.45\textwidth]{chi2test.pdf}
-% \includegraphics[width=0.44\textwidth]{chi2test2.pdf}
-% \caption{The remaining systematic error $\chi^{2}$ from the galaxy-imaging cross power spectrum (top) and the mean galaxy density contrast (bottom). The values observed in the DESI LRG targets before and after linear and non-linear treatments are represented via vertical lines, and the histograms are constructed from 1000 realizations of clean lognormal mocks with $\fnl=0$ and $76.9$.}\label{fig:chi2test}
-% \end{figure}
+where the covariance matrix $\mathbb{C}_{\delta} = < \delta_{X} \delta_{X}>$ is constructed from the lognormal mocks\mr{, in a consistent manner similar to the normalized cross power spectrum}. Figure \ref{fig:nbarmock} shows the mean density contrast against the imaging properties for the DESI LRG targets. The dark and light shades represent the $1\sigma$ level fluctuations observed in 1000 lognormal density fields respectively with $\fnl=0$ and $76.9$ \mr{before mitigation}. The DESI LRG targets before treatment (No Weight) exhibits a strong trend around $10\%$ against the z-band depth which is consistent with the cross power spectrum. Additionally, there are significant spurious trends against extinction and stellar density at about $5-6\%$. The linear approach is able to mitigate most of the systematic fluctuations with only extinction and depth in the z-band as input; however, a new trend appears against the r-band psfsize map with the \textit{linear two maps} approach, which is indicative of the psfsize-related systematics in the DESI LRG targets. This finding is in agreement with that from the cross power spectrum test. With linear three maps, we still observe around $2\%$ residual spurious fluctuations in the low end of depth in z and around $1\%$ in the high end of psfsize in z, which implies the presence of non-linear systematic effects. We find that the imaging weights from the non-linear model trained with the three identified maps (or four maps including the stellar density) are capable of reducing the fluctuations below $2\%$. Even with the non-linear three maps, we have about $1\%$ remaining systematic fluctuations against the z-band psfsize.  \mr{The spurious trends are diminished especially when we adapt non-linear nine maps, especially against the low end of depth in g and r and against the high end of psfsize in z.} 
 
 \begin{figure*}
     \centering
@@ -179,10 +172,9 @@ where the covariance matrix $\mathbb{C}_{\delta} = < \delta_{X} \delta_{X}>$ is 
 \end{figure*}
 
 \subsection{Residual error $\chi^{2}$}
-We use the $\chi^{2}$ statistics to \mr{quantitatively} assess how significant these mean density and cross power spectrum fluctuations are in comparison to the clean mocks. Figure \ref{fig:chi2test} presents $\chi^{2}$ histograms for the mean density contrast (left) and the normalized cross spectrum (right) statistics obtained from the lognormal mocks with different $\fnl$ values \mr{before and after applying mitigation methods. The mocks with $\fnl=0$ are shown with the solid curves while the other set with $\fnl=76.9$ are represented with the dashed curves. The use of the self-consistent covariance matrix (with respect to $\fnl$ or mitigation method) results in similar distributions, and therefore the mock histograms are employed as reference to evaluate the significance of residual systematics in the DESI LRG targets. We continue to use the self-consistent covariance, but consider both the $\fnl=0$ and $76.9$ covariance.} \mout{The $\chi^{2}$ tests are insensitive to $\fnl$, providing consistent distributions regardless of its value that was used for mock generation, and thus these tests help separate systematics from cosmology.} \mout{No mitigation is applied to the mocks, ensuring unbiased $\chi^{2}$ values.} The DESI LRG target $\chi^{2}$ values are compared via the vertical lines and summarized in Table \ref{tab:chi2test}. \mr{The solid and dashed vertical lines represent the values computed using the covariances based on the $\fnl=0$ and $76.9$ mocks, respectively. Regardless of the covariance used in the $\chi^{2}$ calculations, we find that the case without treatment (No Weight) exhibits serious contamination. For instance, the mean density and cross power errors are respectively $\chi^{2}=679.8$ and $20014.8$ (both with $p$-value $< 0.001$), using the $\fnl=0$ covariance. These $\chi^{2}$ values are significantly high given that the degree of freedom is $72$ for the mean density and $81$ for the cross power spectrum.}  \mr{After cleaning, the $\chi^{2}$ values are decreased dramatically for both the mean density and normalized cross spectrum tests. However, neither non-linear three maps nor non-linear four maps can reduce $\chi^{2}$ enough to be consistent with the mocks, indicating some residual error with $p$-values less than $0.005$ for the mean density test.} \mout{After cleaning, the cross power spectrum's $\chi^{2}$ is reduced. However, linear three maps approach fails to clean the data properly at $95\%$ confidence ($\chi^{2}=195.9$ and $p$-value $< 0.04$). Alternative non-linear three maps approach reduces $\chi^{2}$ significantly with $p$-value $=0.59$, supporting the need for non-linear cleaning. For this test, we only use multipoles for up to $\ell=20$, and we find no remaining systematic errors by investigating at higher multipoles (see Appendix \ref{sec:scalesys}). We observe similar performance in the mean density test. The \textit{linear two maps} weights reduce the $\chi^{2}$ from $679.8$ to $178.8$, but significant systematics remain ($p$-value $<0.001$). Applying the linear three maps approach lowers the error to $\chi^{2}=130$, yet systematics remain significant ($p$-value $<0.001$). Cleaning with linear eight maps results in $\chi^{2}=90$ and $p$-value $=0.08$, but using too many imaging maps increases the risk of removing the true clustering signal. Alternatively, using imaging weights from the \textit{non-linear three maps} approach yields $\chi^{2}=74.3$ and $p$-value $=0.39$. Adding the stellar density map (\textit{non-linear four maps}) slightly improves the results: $\chi^{2}=73.2$ and $p$-value $=0.42$.} The small impact on $\chi^{2}$ \mr{from including stellar density} suggests that the stellar density trend can be explained by extinction due to the correlation between these properties, such that in regions with high stellar density, there is likely to be a higher concentration of dust, which can cause greater extinction of light. 
+We use the $\chi^{2}$ statistics to \mr{quantitatively} assess how significant these mean density and cross power spectrum fluctuations are in comparison to the clean mocks. Figure \ref{fig:chi2test} presents $\chi^{2}$ histograms for the mean density contrast (left) and the normalized cross spectrum (right) statistics obtained from the lognormal mocks with different $\fnl$ values \mr{before and after applying mitigation methods. The mocks with $\fnl=0$ are shown with the solid curves while the other set with $\fnl=76.9$ are represented with the dashed curves. The use of the self-consistent covariance matrix (with respect to $\fnl$ or mitigation method) results in similar distributions, and therefore the mock histograms are employed as reference to evaluate the significance of residual systematics in the DESI LRG targets. We continue to use the self-consistent covariance, but consider both the $\fnl=0$ and $76.9$ covariance.} \mout{The $\chi^{2}$ tests are insensitive to $\fnl$, providing consistent distributions regardless of its value that was used for mock generation, and thus these tests help separate systematics from cosmology.} \mout{No mitigation is applied to the mocks, ensuring unbiased $\chi^{2}$ values.} The DESI LRG target $\chi^{2}$ values are compared via the vertical lines and summarized in Table \ref{tab:chi2test}. \mr{The solid and dashed vertical lines represent the values computed using the covariances based on the $\fnl=0$ and $76.9$ mocks, respectively. Regardless of the covariance used in the $\chi^{2}$ calculations, we find that the case without treatment (No Weight) exhibits serious contamination. For instance with the $\fnl=0$ covariance, the mean density and cross power errors are respectively $\chi^{2}=679.8$ and $20014.8$ (both with $p$-value $< 0.001$). These $\chi^{2}$ values are significantly high given that the degree of freedom is $72$ for the mean density and $81$ for the cross power spectrum.}  \mr{After cleaning, the $\chi^{2}$ values are decreased dramatically for both the mean density and normalized cross spectrum tests.} \mout{After cleaning, the cross power spectrum's $\chi^{2}$ is reduced. However, linear three maps approach fails to clean the data properly at $95\%$ confidence ($\chi^{2}=195.9$ and $p$-value $< 0.04$). Alternative non-linear three maps approach reduces $\chi^{2}$ significantly with $p$-value $=0.59$, supporting the need for non-linear cleaning. For this test, we only use multipoles for up to $\ell=20$, and we find no remaining systematic errors by investigating at higher multipoles (see Appendix \ref{sec:scalesys}). We observe similar performance in the mean density test. The \textit{linear two maps} weights reduce the $\chi^{2}$ from $679.8$ to $178.8$, but significant systematics remain ($p$-value $<0.001$). Applying the linear three maps approach lowers the error to $\chi^{2}=130$, yet systematics remain significant ($p$-value $<0.001$). Cleaning with linear eight maps results in $\chi^{2}=90$ and $p$-value $=0.08$, but using too many imaging maps increases the risk of removing the true clustering signal. Alternatively, using imaging weights from the \textit{non-linear three maps} approach yields $\chi^{2}=74.3$ and $p$-value $=0.39$. Adding the stellar density map (\textit{non-linear four maps}) slightly improves the results: $\chi^{2}=73.2$ and $p$-value $=0.42$.} The small impact on $\chi^{2}$ \mr{from including stellar density} suggests that the stellar density trend can be explained by extinction due to the correlation between these properties, such that in regions with high stellar density, there is likely to be a higher concentration of dust, which can cause greater extinction of light. \mr{However, neither non-linear three maps nor non-linear four maps can reduce the mean density $\chi^{2}$ enough to be consistent with the mocks, indicating some significant residual error with $p$-values less than $0.005$.} 
 
-The tests conducted here demonstrate the effectiveness of various cleaning approaches for the DESI LRG targets without revealing the measured power spectrum or $\fnl$ constraints. \mout{Results summarized in Table \ref{tab:chi2test} show that cleaning with non-linear three maps consistently produces $\chi^{2}$ values similar to clean mocks with reasonable $p$-values ($=0.39$ for mean density and $=0.59$ for cross power spectrum). On the other hand, the linear three maps approach fails to sufficiently mitigate systematics, as evidenced by low $p$-values ($< 0.001$ for mean density and $=0.04$ for cross power spectrum). Considering $p=0.05$ as a threshold for clean maps, the non-linear three maps approach is optimal, as adding more imaging systematic maps may exacerbate over-correction issues.} \mr{Overall, we observe that the non-linear method with the set of nine imaging property maps, successfully passes the mean density test irrespective of the covariance, as indicated by $\chi^{2}=71.9$ ($p$-value = $>0.48$) for the $\fnl=0$ covariance. On the other hand, the non-linear three maps and non-linear four maps methods both fail
-to sufficiently mitigate systematics in the mean density test, as evidenced by low $p$-values. Our work shows that it is essential to maintain a consistent covariance matrix, involving the same mitigation and ensuring consistency in $\fnl$ within the covariance. The sensitivity of the mean density $\chi^{2}$ to the $\fnl$ assumption in the covariance is notably lower, with greater reliance on the consistent mitigation method. Conversely, the normalized cross spectrum $\chi^{2}$ exhibits a higher dependency on the $\fnl$ assumption in the covariance. The normalized cross power spectrum $\chi^{2}$ only involves multipoles for up to $\ell=20$, which determines the smallest scale used for characterizing residual systematic errors. As a robustness test, we increase the largest $\ell$ used in the $\chi^{2}$ calculation from $20$ to $100$, where the latter scale corresponds to density fluctuations on angular scales smaller than $2$ degrees. But we find no remaining systematic errors across higher scales (see Figure \ref{fig:chi2cellextend}).}
+The tests conducted here demonstrate the effectiveness of various cleaning approaches for the DESI LRG targets without revealing the measured power spectrum or $\fnl$ constraints. \mout{Results summarized in Table \ref{tab:chi2test} show that cleaning with non-linear three maps consistently produces $\chi^{2}$ values similar to clean mocks with reasonable $p$-values ($=0.39$ for mean density and $=0.59$ for cross power spectrum). On the other hand, the linear three maps approach fails to sufficiently mitigate systematics, as evidenced by low $p$-values ($< 0.001$ for mean density and $=0.04$ for cross power spectrum). Considering $p=0.05$ as a threshold for clean maps, the non-linear three maps approach is optimal, as adding more imaging systematic maps may exacerbate over-correction issues.} \mr{Overall, we observe that the non-linear method with the set of nine imaging property maps, successfully passes the mean density test irrespective of the covariance, as indicated by $\chi^{2}=71.9$ ($p$-value = $>0.48$) for the $\fnl=0$ covariance. On the other hand, the non-linear three maps and non-linear four maps methods both fail to sufficiently mitigate systematics in the mean density test, as evidenced by low $p$-values. Our work shows that it is essential to maintain a consistent covariance matrix, involving the same mitigation and ensuring consistency in $\fnl$ within the covariance. The sensitivity of the mean density $\chi^{2}$ to the $\fnl$ assumption in the covariance is notably lower, with greater reliance on the consistent mitigation method.  Conversely, the normalized cross spectrum $\chi^{2}$ exhibits a higher dependency on the $\fnl$ assumption in the covariance. The mean density diagnostic appears to be a less cosmology-sensitive probe of residual systematics. As a robustness test, we also increase the largest $\ell$ used in the $\chi^{2}$ calculation to $\ell=100$, which corresponds to density fluctuations on angles smaller than $2$ degrees. But we find no remaining systematic error from higher harmonic modes (see Appendix \ref{sec:scalesys}). The conclusion of these tests is that the non-linear method with the set of nine maps passes our null tests for the remaining systematics, and thus is chosen as the default approach for the treatment of imaging systematic effects. In the following subsection, we show how imaging systematic regressions remove clustering modes, with increasing dependence on the number of maps used, and thus bias the best fitting estimates of $\fnl$. Then, we present how we calibrate for the over-correction for our default mitigation method.}
 
 \begin{table*}
   \caption{Mean galaxy density contrast $\chi^{2}$ and normalized cross power spectrum $\chi^{2}$ \mr{from the DESI LRG targets} and $p$-values that are inferred from the comparison to the $\fnl=0$ and $76.9$ clean mocks \mr{that have received the same mitigation. For the case of No Weight, we use the clean mocks without mitigation}.}\label{tab:chi2test}
